--- a/Config.in
+++ b/Config.in
@@ -65,7 +65,7 @@ menu "Linux Image Storage Setup"
 
 config CONFIG_OS_MEM_BANK
 	string "Extern Memory Bank Base Address"
-	default "0x70000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x70000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x20000000"
 	
 config CONFIG_OS_MEM_SIZE
@@ -86,7 +86,7 @@ config CONFIG_LINUX_KERNEL_ARG_STRING
 	default "mem=128M console=ttyS0,115200 mtdparts=atmel_nand:8M(bootstrap/kernel)ro,-(rootfs) rw rootfstype=ubifs ubi.mtd=1 root=ubi0:rootfs" if CONFIG_AT91SAM9X5EK && !CONFIG_SDCARD
 	default "mem=128M console=ttyS0,115200 mtdparts=atmel_nand:8M(bootstrap/kernel)ro,-(rootfs) rw rootfstype=ubifs ubi.mtd=1 root=ubi0:rootfs" if CONFIG_AT91SAM9N12EK && !CONFIG_SDCARD
 	default "mem=512M console=ttyS0,115200 mtdparts=atmel_nand:8M(bootstrap/kernel)ro,-(rootfs) rw rootfstype=ubifs ubi.mtd=1 root=ubi0:rootfs" if CONFIG_AT91SAMA5D3XEK && !CONFIG_SDCARD
-	default "mem=64M console=ttyS0,115200 mtdparts=atmel_nand:8M(bootstrap/kernel),60M(rootfs),-(spare) root=/dev/mtdblock1 rw rootfstype=jffs2" if (CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800) && !CONFIG_SDCARD
+	default "mem=64M console=ttyS0,115200 mtdparts=atmel_nand:8M(bootstrap/kernel),60M(rootfs),-(spare) root=/dev/mtdblock1 rw rootfstype=jffs2" if (CONFIG_AT91SAM9M10G45EK || CONFIG_APP800) && !CONFIG_SDCARD
 	default "mem=64M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if CONFIG_AT91SAM9RLEK && CONFIG_SDCARD
 	default "mem=64M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if CONFIG_AT91SAM9G10EK && CONFIG_SDCARD
 	default "mem=64M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if CONFIG_AT91SAM9261EK && CONFIG_SDCARD
@@ -96,7 +96,7 @@ config CONFIG_LINUX_KERNEL_ARG_STRING
 	default "mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if CONFIG_AT91SAM9X5EK && CONFIG_SDCARD
 	default "mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if CONFIG_AT91SAM9N12EK && CONFIG_SDCARD
 	default "mem=512M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if CONFIG_AT91SAMA5D3XEK && CONFIG_SDCARD
-	default "mem=64M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if (CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800) && CONFIG_SDCARD
+	default "mem=64M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2" if (CONFIG_AT91SAM9M10G45EK || CONFIG_APP800) && CONFIG_SDCARD
 
 config CONFIG_OS_IMAGE_NAME
 	string "Binary Name on SD Card"
@@ -119,7 +119,7 @@ config CONFIG_IMG_SIZE
 
 config CONFIG_JUMP_ADDR
 	string "The External Ram Address to Load Kernel Image"
-	default "0x72000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x72000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x22000000"
 	help
 	  The entry point to which the bootstrap will pass control.
@@ -148,7 +148,7 @@ config CONFIG_OF_FILENAME
 config CONFIG_OF_ADDRESS
 	string "The External Ram Address to Load Device Tree Blob"
 	depends on CONFIG_OF_LIBFDT
-	default "0x71000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x71000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x21000000"
 	help
 
@@ -162,7 +162,7 @@ menu "Android Image Storage Setup"
 
 config CONFIG_OS_MEM_BANK
 	string "Extern Memory Bank Base Address"
-	default "0x70000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x70000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x20000000"
 
 config CONFIG_OS_MEM_SIZE
@@ -197,7 +197,7 @@ config CONFIG_IMG_SIZE
 
 config CONFIG_JUMP_ADDR
 	string "The External Ram Address to Load Kernel Image"
-	default "0x72000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x72000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x22000000"
 	help
 	  The entry point to which the bootstrap will pass control.
@@ -226,7 +226,7 @@ config CONFIG_OF_FILENAME
 config CONFIG_OF_ADDRESS
 	string "The External Ram Address to Load Device Tree Blob"
 	depends on CONFIG_OF_LIBFDT
-	default "0x71000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x71000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x21000000"
 	help
 
@@ -261,7 +261,7 @@ config CONFIG_IMG_SIZE
 
 config CONFIG_JUMP_ADDR
 	string "The External Ram Address to Load U-Boot Image"
-	default "0x73F00000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x73F00000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x26F00000" if CONFIG_AT91SAM9X5EK || CONFIG_AT91SAM9N12EK || CONFIG_AT91SAMA5D3XEK
 	default "0x21F00000" if CONFIG_AT91SAM9260EK || CONFIG_AT91SAM9261EK || CONFIG_AT91SAM9263EK || CONFIG_AT91SAM9G10EK || CONFIG_AT91SAM9G20EK || CONFIG_AT91SAM9RLEK
 	default "0x23F00000"
@@ -299,7 +299,7 @@ config CONFIG_IMG_SIZE
 
 config CONFIG_JUMP_ADDR
 	string "The External Ram Address to Load Demo-App Image"
-	default "0x70000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_HMI800
+	default "0x70000000" if CONFIG_AT91SAM9M10G45EK || CONFIG_APP800
 	default "0x20000000"
 	help
 	  The entry point to which the bootstrap will pass control.
@@ -356,7 +356,7 @@ config CONFIG_THUMB
 	  Build code in thumb mode
 
 config CONFIG_SCLK	  
-	depends on CONFIG_AT91SAM9RLEK || CONFIG_AT91SAM9M10G45EK || CONFIG_AT91SAM9X5EK || CONFIG_AT91SAM9N12EK || CONFIG_AT91SAMA5D3XEK || CONFIG_HMI800
+	depends on CONFIG_AT91SAM9RLEK || CONFIG_AT91SAM9M10G45EK || CONFIG_AT91SAM9X5EK || CONFIG_AT91SAM9N12EK || CONFIG_AT91SAMA5D3XEK || CONFIG_APP800
 	bool "Use external 32KHZ oscillator as source of slow clock"
 	help
 	  Use external 32KHZ oscillator as source of slow clock
