--- a/board/app800/app800nf_uboot_defconfig
+++ b/board/app800/app800nf_uboot_defconfig
@@ -1,9 +1,9 @@
 #
 # Automatically generated make config: don't edit
-# Mon Jun 10 16:11:15 2013
+# Fri Jul  5 20:34:08 2013
 #
 HAVE_DOT_CONFIG=y
-CONFIG_BOARDNAME="hmi800"
+CONFIG_BOARDNAME="app800"
 # CONFIG_AT91SAM9260EK is not set
 # CONFIG_AT91SAM9261EK is not set
 # CONFIG_AT91SAM9263EK is not set
@@ -15,9 +15,9 @@ CONFIG_BOARDNAME="hmi800"
 # CONFIG_AT91SAM9X5EK is not set
 # CONFIG_AT91SAM9N12EK is not set
 # CONFIG_AT91SAMA5D3XEK is not set
-CONFIG_HMI800=y
+CONFIG_APP800=y
 CONFIG_CHIP="AT91SAM9G45"
-CONFIG_BOARD="hmi800"
+CONFIG_BOARD="app800"
 CONFIG_MACH_TYPE="1830"
 CONFIG_LINK_ADDR="0x300000"
 CONFIG_TOP_OF_MEMORY="0x30A000"
@@ -59,9 +59,9 @@ ALLOW_HSMCI=y
 # ALLOW_PSRAM is not set
 # ALLOW_SDRAM_16BIT is not set
 # CONFIG_RAM_32MB is not set
-CONFIG_RAM_64MB=y
+# CONFIG_RAM_64MB is not set
 # CONFIG_RAM_128MB is not set
-# CONFIG_RAM_256MB is not set
+CONFIG_RAM_256MB=y
 # CONFIG_RAM_512MB is not set
 # CONFIG_DATAFLASH is not set
 # CONFIG_FLASH is not set
@@ -104,4 +104,5 @@ CONFIG_DEBUG_INFO=y
 CONFIG_HW_INIT=y
 # CONFIG_USER_HW_INIT is not set
 CONFIG_THUMB=y
+# CONFIG_SCLK is not set
 CONFIG_DISABLE_WATCHDOG=y
